--- a/source/jade/includes/head.jade
+++ b/source/jade/includes/head.jade
@@ -29,6 +29,8 @@ meta(name='apple-mobile-web-app-title', content='')
 
 link(rel='stylesheet', href='css/app.css')
 link(rel='stylesheet', href='css/font-awesome.min.css')
+link(rel='stylesheet', href='fonts/kelson/kelson.css')
+link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin,cyrillic', type='text/css')
 
 <!--[if (gte IE 6)&(lte IE 9)]>
 <script src="js/vendor/respond.min.js"></script>
