--- a/source/scss/_responsive-grid.scss
+++ b/source/scss/_responsive-grid.scss
@@ -1,6 +1,6 @@
 @import "settings";
 
-@include gridle_generate_classes ( );
+//@include gridle_generate_classes ();
 
 .container {
 	max-width: 960px;
