--- a/source/scss/_nav.scss
+++ b/source/scss/_nav.scss
@@ -13,6 +13,7 @@
     height: 0;
     border-top: 1px solid #046BAA;
     border-bottom: 1px solid #2292D6;
+    pointer-events: none;
   }
 
   &:before {
@@ -46,24 +47,102 @@
     &.active {
       height: auto;
     }
-    ul {
+    & > ul {
       margin: 0;
       padding: 0;
 
-      li a {
-        display: block;
-        height: 45px;
-        line-height: 45px;
-        color: #fff;
-        background-color: #0077BF;
-        font-size: 1.231rem;
-        font-weight: 700;
-        padding: 0 8px;
-        text-transform: uppercase;
-        text-decoration: none;
-        @include text-shadow(0 1px 0 #054872);
+      & > li {
+
+        &.navbar__social {
+          .fa {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            @include border-radius(4px);
+            @include background-clip(padding-box);
+            background-color: #fff;
+            color: #0077C0;
+            @include text-shadow(none);
+            text-align: center;
+            font-size: 13px;
+            line-height: 20px;
+            position: relative;
+            top: -0.2rem;
+          }
+        }
+
+        & > a {
+          display: block;
+          height: 45px;
+          line-height: 45px;
+          color: #fff;
+          background-color: #0077BF;
+          font-size: 1.231rem;
+          font-weight: 700;
+          padding: 0 8px;
+          text-transform: uppercase;
+          text-decoration: none;
+          @include text-shadow(0 1px 0 #054872);
+
+          &:hover {
+            color: #FFD821;
+          }
+        }
+
+        &.dropdown {
+          height: 45px;
+          overflow: hidden;
+          position: relative;
+          &:after {
+            content: '+';
+            display: block;
+            position: absolute;
+            right: 8px; top: 13px;
+            width: 19px;
+            height: 19px;
+            border: 2px solid #fff;
+            color: #FFF;
+            font-size: 16px;
+            line-height: 15px;
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+            pointer-events: none;
+          }
+          &.active {
+            height: auto;
+            &:after {
+              content: '-';
+              line-height: 13px;
+            }
+            & > a {
+              color: #FFD821;
+            }
+          }
+          & > ul {
+            padding: 10px 0;
+            background-color: #0A81C9;
+            & > li {
+              & > a {
+                display: block;
+                height: 30px;
+                line-height: 30px;
+                color: #fff;
+                background-color: #0A81C9;
+                font-size: 1.077rem;
+                font-weight: 400;
+                padding: 0 35px;
+                text-transform: none;
+                text-decoration: none;
+                &:hover {
+                  background-color: #0077BF;
+                }
+              }
+            }
+          }
+        }
       }
-      li:nth-child(2n+1) a {
+
+      & > li:nth-child(2n+1) a {
         background-color: #0A81C9;
       }
     }
@@ -75,16 +154,46 @@
     }
     nav[role=navigation] {
       height: auto;
-      ul {
+      overflow: visible !important;
+      & > ul {
         border: 0;
-        li {
+        & > li {
           display: inline-block;
+          float: left;
+          &.navbar__social {
+            float: right;
+          }
           &:nth-child(2n+1) a {
             background-color: transparent;
           }
-          a {
+          & > a {
             border: 0;
             background-color: transparent;
+          }
+          &.dropdown {
+            overflow: visible;
+            &:after {
+              display: none;
+            }
+            &:hover {
+              & > ul {
+                display: block;
+              }
+              & > a {
+                color: #FFD821;
+              }
+            }
+            & > ul {
+              display: none;
+              position: absolute;
+              top: 45px;
+              width: 270px;
+              & > li {
+                & > a {
+
+                }
+              }
+            }
           }
         }
       }
