--- a/source/jade/includes/head.jade
+++ b/source/jade/includes/head.jade
@@ -42,4 +42,4 @@ link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto+Conde
 script(src='js/vendor/modernizr.js')
 
 //- Uncomment for LiveReload
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+//- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
