--- a/source/jade/includes/nav.jade
+++ b/source/jade/includes/nav.jade
@@ -2,24 +2,25 @@
   a(href="#menu", class="navbar__menulink")
     i.fa.fa-navicon
     |&nbsp;Меню
-  nav#menu(role="navigation")
-    ul
-      li: a(href="#") Главная
-      li: a(href="#") Новости и акции
-      li.dropdown
-        a(href="#") Автошкола
-        ul
-          li: a(href="#") Процесс обучения
-          li: a(href="#") Стоимость
-          li: a(href="#") Документы
-          li: a(href="#") Дополнительные услуги
-      li.dropdown
-        a(href="#") Обучение
-        ul
-          li: a(href="#") Процесс обучения
-          li: a(href="#") Стоимость
-          li: a(href="#") Документы
-          li: a(href="#") Дополнительные услуги
-      li: a(href="#") Форум
-      li: a(href="#") Контакты
-      li.navbar__social: a(href="#") Мы в соцсетях &nbsp;<i class="fa fa-vk"></i>
+  .container
+    nav#menu(role="navigation")
+      ul
+        li: a(href="#") Главная
+        li: a(href="#") Новости и акции
+        li.dropdown
+          a(href="#") Автошкола
+          ul
+            li: a(href="#") Процесс обучения
+            li: a(href="#") Стоимость
+            li: a(href="#") Документы
+            li: a(href="#") Дополнительные услуги
+        li.dropdown
+          a(href="#") Обучение
+          ul
+            li: a(href="#") Процесс обучения
+            li: a(href="#") Стоимость
+            li: a(href="#") Документы
+            li: a(href="#") Дополнительные услуги
+        li: a(href="#") Форум
+        li: a(href="#") Контакты
+        li.navbar__social: a(href="#") Мы в соцсетях &nbsp;<i class="fa fa-vk"></i>
