--- a/source/scss/_responsive-grid.scss
+++ b/source/scss/_responsive-grid.scss
@@ -1,8 +1,8 @@
 @import "settings";
 
-//@include gridle_generate_classes ();
+@include gridle_generate_classes ();
 
 .container {
-	max-width: 960px;
+	max-width: 1300px;
 	margin: 0 auto;
 }
