header + slider ready

--- a/source/jade/includes/head.jade
+++ b/source/jade/includes/head.jade
@@ -4,7 +4,7 @@ title #{title}
 meta(name='keywords', content='')
 meta(name='description', content='')
 
-meta(name='viewport', content='width=device-width, initial-scale=1')
+meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
 
 //- Add to homescreen for Chrome on Android
 meta(name='mobile-web-app-capable', content='yes')
@@ -23,9 +23,9 @@ meta(name='msapplication-TileColor', content='#106DA6')
 link(rel='shortcut icon', sizes='196x196', href='i/icons/touch-icon-196x196.png')
 
 //- For iOS web apps.
-meta(name='apple-mobile-web-app-capable', content='yes')
-meta(name='apple-mobile-web-app-status-bar-style', content='black')
-meta(name='apple-mobile-web-app-title', content='')
+//- meta(name='apple-mobile-web-app-capable', content='yes')
+//- meta(name='apple-mobile-web-app-status-bar-style', content='black')
+//- meta(name='apple-mobile-web-app-title', content='')
 
 link(rel='stylesheet', href='css/app.css')
 link(rel='stylesheet', href='css/font-awesome.min.css')
