--- a/source/jade/index.jade
+++ b/source/jade/index.jade
@@ -5,9 +5,11 @@ doctype html
 html(lang='ru').no-js
   head
     include includes/head
-  body
+  body(onload="loaded()")
     .page-wrap
       include includes/header
       include includes/nav
+      include includes/slider
+      .container: p Lorem ipsum Sint ex consequat sit aute dolor aute adipisicing minim non tempor irure Excepteur minim sed fugiat irure ut in nisi esse sit laborum magna non cupidatat fugiat exercitation adipisicing sint occaecat dolor deserunt magna Ut nostrud et aliqua consectetur adipisicing nulla laboris minim ut deserunt voluptate ea culpa dolor commodo voluptate sunt ut dolor eiusmod est deserunt eu in laborum cillum sed eiusmod consequat fugiat cupidatat ut occaecat reprehenderit adipisicing ullamco ea sed quis commodo esse non occaecat est in ut est laborum officia culpa enim aliquip qui amet in elit cupidatat in quis eiusmod aliqua ex exercitation dolor id minim cupidatat aliqua pariatur qui eu sit dolore magna eu reprehenderit irure incididunt velit laborum amet nisi aliqua dolore occaecat in esse cillum ullamco aute adipisicing aliquip officia officia in Duis in reprehenderit non commodo incididunt officia laborum sunt occaecat et in qui culpa est ad ullamco cupidatat cupidatat laboris irure elit tempor.
       include includes/footer
     include includes/tail
