--- a/source/jade/includes/footer.jade
+++ b/source/jade/includes/footer.jade
@@ -1,1 +1,31 @@
 footer
+  .container
+    .footer__col
+      ul
+        li.item__main: a(href="#") Автошкола
+        li: a(href="#") История
+        li: a(href="#") Достижения
+        li: a(href="#") Фотолагерея
+        li: a(href="#") Учредительные документы
+    .footer__col
+      ul
+        li.item__main: a(href="#") Обучение
+        li: a(href="#") Процесс обучения
+        li: a(href="#") Стоимость
+        li: a(href="#") Документы
+        li: a(href="#") Дополнительные услуги
+    .footer__col
+      ul
+        li.item__main: a(href="#") Новости и акции
+        li.item__main: a(href="#") Форум
+        li.item__main: a(href="#") Мы в соц сетях <i class="fa fa-vk"></i>
+    .footer__col.footer__col--last
+      ul
+        li.item__main: a(href="#") Контакты
+        li: a(href="#") Карта офисов и классов
+        li: a(href="#") Контакты
+    .footer__info Сайт разработан в соответствии с федеральным законом об образовании РФ
+    .footer__contact
+      span Контактная информация
+      h2 8 (423) 2-205-203, 273-07-08
+    .footer__developer <i class="iastudio__logo"></i> Разработка сайта - <a href="http://iastudio.ru">Интерактив</a>
