--- a/source/jade/index.jade
+++ b/source/jade/index.jade
@@ -10,6 +10,94 @@ html(lang='ru').no-js
       include includes/header
       include includes/nav
       include includes/slider
-      .container: p Lorem ipsum Sint ex consequat sit aute dolor aute adipisicing minim non tempor irure Excepteur minim sed fugiat irure ut in nisi esse sit laborum magna non cupidatat fugiat exercitation adipisicing sint occaecat dolor deserunt magna Ut nostrud et aliqua consectetur adipisicing nulla laboris minim ut deserunt voluptate ea culpa dolor commodo voluptate sunt ut dolor eiusmod est deserunt eu in laborum cillum sed eiusmod consequat fugiat cupidatat ut occaecat reprehenderit adipisicing ullamco ea sed quis commodo esse non occaecat est in ut est laborum officia culpa enim aliquip qui amet in elit cupidatat in quis eiusmod aliqua ex exercitation dolor id minim cupidatat aliqua pariatur qui eu sit dolore magna eu reprehenderit irure incididunt velit laborum amet nisi aliqua dolore occaecat in esse cillum ullamco aute adipisicing aliquip officia officia in Duis in reprehenderit non commodo incididunt officia laborum sunt occaecat et in qui culpa est ad ullamco cupidatat cupidatat laboris irure elit tempor.
+      .container
+        .teachers
+          h2 Наши преподователи и инструкторы по вождению
+          .teachers__container
+            ul
+              li: a(href="#")
+                img.teachers__pic(src="i/placeholders/avatar-1.jpg")
+                .teachers__content
+                  h5 Лукан Фёдор
+                  span автомобиль: Toyota chaser
+                  p победитель двух этапов чемпионата кольцевых автогонок Zmeinka
+              li: a(href="#")
+                img.teachers__pic(src="i/placeholders/avatar-2.jpg")
+                .teachers__content
+                  h5 Лукан Фёдор
+                  span автомобиль: Toyota chaser
+                  p победитель двух этапов чемпионата кольцевых автогонок Zmeinka
+              li: a(href="#")
+                img.teachers__pic(src="i/placeholders/avatar-3.jpg")
+                .teachers__content
+                  h5 Лукан Фёдор
+                  span автомобиль: Toyota chaser
+                  p победитель двух этапов чемпионата кольцевых автогонок Zmeinka
+              li.hide-xs: a(href="#")
+                img.teachers__pic(src="i/placeholders/avatar-1.jpg")
+                .teachers__content
+                  h5 Лукан Фёдор
+                  span автомобиль: Toyota chaser
+                  p победитель двух этапов чемпионата кольцевых автогонок Zmeinka
+              li.hide-xs: a(href="#")
+                img.teachers__pic(src="i/placeholders/avatar-2.jpg")
+                .teachers__content
+                  h5 Лукан Фёдор
+                  span автомобиль: Toyota chaser
+                  p победитель двух этапов чемпионата кольцевых автогонок Zmeinka
+              li.hide-xs: a(href="#")
+                img.teachers__pic(src="i/placeholders/avatar-3.jpg")
+                .teachers__content
+                  h5 Лукан Фёдор
+                  span автомобиль: Toyota chaser
+                  p победитель двух этапов чемпионата кольцевых автогонок Zmeinka
+          .center
+            a.btn.hidden-sm(href="#") Смотреть всех
+        .news
+          h5.news__title Новости компании
+          ul
+            li: a(href="#")
+              .news__image
+                img(src="i/placeholders/placeholder-news-1.jpg")
+              .news__content
+                span 15 мая 2014
+                h5 Семинар-тренинг Громоковского Г.Б.
+                p У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей
+                .btn Читать полностью
+            li: a(href="#")
+              .news__image
+                img(src="i/placeholders/placeholder-news-2.jpg")
+              .news__content
+                span 15 мая 2014
+                h5 Внимание! Изменение маршрута городских занятий!
+                p Возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге»  для руководителей
+                .btn Читать полностью
+            li: a(href="#")
+              .news__image
+                img(src="i/placeholders/placeholder-news-1.jpg")
+              .news__content
+                span 15 мая 2014
+                h5 Семинар-тренинг Громоковского Г.Б.
+                p У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей
+                .btn Читать полностью
+            li.hide-sm: a(href="#")
+              .news__image
+                img(src="i/placeholders/placeholder-news-2.jpg")
+              .news__content
+                span 15 мая 2014
+                h5 Внимание! Изменение маршрута городских занятий!
+                p Возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге»  для руководителей
+                .btn Читать полностью
+            li.hide-sm: a(href="#")
+              .news__image
+                img(src="i/placeholders/placeholder-news-1.jpg")
+              .news__content
+                span 15 мая 2014
+                h5 Семинар-тренинг Громоковского Г.Б.
+                p У Вас есть уникальная возможность принять участие в семинаре Геннадия Громоковского «Защитные методы поведения на дороге» для руководителей
+                .btn Читать полностью
+          .center
+            a.btn.hidden-sm(href="#") Все новости
+          a.news__all.hide-xs.show-md(href="#") Все новости
       include includes/footer
     include includes/tail
