--- a/source/scss/_forms.scss
+++ b/source/scss/_forms.scss
@@ -57,33 +57,43 @@ textarea {
   user-select: none;
 
   text-align: center;
-  color: #fff;
-  text-transform: uppercase;
+  // text-transform: uppercase;
 
-  font-size: 1.385rem;
-  font-weight: 700;
-  @include text-shadow(0 1px 0 rgba(132,89,5,.75));
+  font-size: rem-calc(14px);
+  font-weight: 400;
+  font-size: 14px;
+  @include text-shadow(0 1px 0 #fff);
 
+  color: #8c8c8c;
 
   margin-bottom: 18px;
   padding: 10px 20px;
 
   height: 2rem;
-  @include border-radius(15px);
+  // @include border-radius(15px);
+  // @include background-clip(padding-box);
+  // background-color: #db1921;
+  // @include box-shadow(0 1px 0 #cb3731, inset 0 0 8px #b91015, 0 1px 0 #93494b, 0 0 3px #8f2c31, 0 4px 0 #B81A1C);
+  // @include background-image(linear-gradient(to bottom, #db1921 0%, #d91921 100%));
+
+  @include border-radius(14px);
   @include background-clip(padding-box);
-  background-color: #db1921;
-  @include box-shadow(0 1px 0 #cb3731, inset 0 0 8px #b91015, 0 1px 0 #93494b, 0 0 3px #8f2c31, 0 4px 0 #B81A1C);
-  @include background-image(linear-gradient(to bottom, #db1921 0%, #d91921 100%));
+  background-color: #F7F7F7;
+  @include box-shadow(0 0 0 1px rgba(0,0,0,.38), inset 0 0 3px #fff);
+  @include background-image(linear-gradient(to bottom, #f9f9f9 0%, #ececec 100%));
 
 
   &:hover {
-    @include text-shadow(0 1px 0 rgba(0,0,0,.18));
-    color: #FFF;
-    background-color: #7ECE31;
-    @include box-shadow(0 1px 0 #74BB43, inset 0 0 8px #6EB82D, 0 1px 0 #74BB43, 0 0 3px #BDCEB4, 0 4px 0 #569E13);
-    @include background-image(linear-gradient(to bottom, #71BB31 0%, #7ECF31 100%));
+    // @include text-shadow(0 1px 0 rgba(0,0,0,.18));
+    // color: #FFF;
+    // background-color: #7ECE31;
+    // @include box-shadow(0 1px 0 #74BB43, inset 0 0 8px #6EB82D, 0 1px 0 #74BB43, 0 0 3px #BDCEB4, 0 4px 0 #569E13);
+    // @include background-image(linear-gradient(to bottom, #71BB31 0%, #7ECF31 100%));
+    background-color: lighten(#F7F7F7, 5%);
+    color: #8c8c8c;
+    @include background-image(linear-gradient(to bottom, lighten(#f9f9f9, 5%) 0%, lighten(#ececec, 5%) 100%));
     &:active {
-      @include box-shadow(0 1px 0 #74BB43, inset 0 0 8px #6EB82D, 0 1px 0 #74BB43, 0 0 3px #BDCEB4, 0 2px 0 #569E13);
+      // @include box-shadow(0 1px 0 #74BB43, inset 0 0 8px #6EB82D, 0 1px 0 #74BB43, 0 0 3px #BDCEB4, 0 2px 0 #569E13);
       //top: 2px;
     }
   }
@@ -91,6 +101,6 @@ textarea {
   &.btn {
     padding-top: 0;
     padding-bottom: 0;
-    line-height: 2.3rem;
+    line-height: 2rem;
   }
 }
