--- a/source/jade/includes/nav.jade
+++ b/source/jade/includes/nav.jade
@@ -5,22 +5,26 @@
   .container
     nav#menu(role="navigation")
       ul
-        li: a(href="#") Главная
-        li: a(href="#") Новости и акции
+        li: a(href="index.html") Главная
+        li: a(href="news.html") Новости и акции
         li.dropdown
           a(href="#") Автошкола
           ul
-            li: a(href="#") Процесс обучения
-            li: a(href="#") Стоимость
-            li: a(href="#") Документы
-            li: a(href="#") Дополнительные услуги
+            li: a(href="school.html") История
+            li: a(href="school.html") Достижения
+            li: a(href="school.html") Фотогалерея
+            li: a(href="school.html") Учредительные документы
         li.dropdown
           a(href="#") Обучение
           ul
-            li: a(href="#") Процесс обучения
-            li: a(href="#") Стоимость
-            li: a(href="#") Документы
-            li: a(href="#") Дополнительные услуги
+            li: a(href="study.html") Процесс обучения
+            li: a(href="study.html") Стоимость
+            li: a(href="study.html") Документы
+            li: a(href="study.html") Дополнительные услуги
         li: a(href="#") Форум
-        li: a(href="#") Контакты
+        li.dropdown
+          a(href="#") Контакты
+          ul
+            li: a(href="contacts.html") Контакты
+            li: a(href="contacts-2.html") Карта офисов и классов
         li.navbar__social: a(href="#") Мы в соцсетях &nbsp;<i class="fa fa-vk"></i>
