--- a/source/jade/includes/head.jade
+++ b/source/jade/includes/head.jade
@@ -30,6 +30,7 @@ link(rel='shortcut icon', sizes='196x196', href='i/icons/touch-icon-196x196.png'
 link(rel='stylesheet', href='css/app.css')
 link(rel='stylesheet', href='css/font-awesome.min.css')
 link(rel='stylesheet', href='fonts/kelson/kelson.css')
+link(rel='stylesheet', href='fonts/icons.css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin,cyrillic', type='text/css')
 
 <!--[if (gte IE 6)&(lte IE 9)]>
