--- a/source/scss/_else.scss
+++ b/source/scss/_else.scss
@@ -45,6 +45,7 @@
         a {
           display: block;
           text-decoration: none;
+          color: #656565;
         }
 
         .teachers__pic {
@@ -219,8 +220,115 @@
         @include gridle_state( sm ) {
           margin-bottom: 18px;
         }
+
+        a {
+          text-decoration: underline;
+          color: #0077BF;
+          &:hover {
+            text-decoration: none;
+          }
+        }
       }
     }
   }
 
+}
+
+.plans {
+  .plans__item {
+    @include gridle( 12 , xs);
+    @include gridle( 4 , sm);
+
+    margin-bottom: 30px;
+
+    .plans__item__head {
+
+      margin-bottom: 18px;
+
+      @include gridle_state( sm ) {
+        margin-bottom: 30px;
+      }
+
+      i {
+        display: inline;
+        color: #237DC9;
+        font-size: rem-calc(30px);
+        float: left;
+        margin-right: 22px;
+      }
+      h2 {
+        color: #000;
+        font-size: rem-calc(16px);
+        font-weight: 700;
+        line-height: 30px;
+        text-transform: none;
+        text-wrap: pre;
+      }
+    }
+
+    .plans__item__content {
+      font-size: rem-calc(14px);
+      margin-bottom: 20px;
+      line-height: 1.3;
+
+      @include gridle_state( md ) {
+        min-height: 170px;
+      }
+    }
+
+    .plans__item__price {
+      color: #000;
+      font-size: rem-calc(24px);
+      margin-bottom: 18px;
+      font-weight: 700;
+    }
+  }
+}
+
+
+.contacts__item {
+  border-bottom: 1px solid #CCCCCC;
+  @extend %gridle-clearfix;
+  padding: 20px 0;
+  h2 {
+    color: #0077bf;
+    font-size: rem-calc(18px);
+    font-weight: 700;
+    @include text-shadow(0 1px 0 #fff);
+    text-transform: uppercase;
+    margin-bottom: 18px;
+  }
+  p {
+    margin-bottom: 18px;
+    font-size: rem-calc(14px);
+  }
+  .contacts__item__map {
+    width: 620px;
+    height: 250px;
+    margin-bottom: 18px;
+  }
+  .contacts__item__info {
+    font-size: rem-calc(14px);
+    margin-bottom: 18px;
+    i {
+      display: block;
+      float: left;
+      width: 30px;
+      min-height: 40px;
+      color: #727272;
+      font-size: rem-calc(23px);
+    }
+  }
+}
+
+.bigmap {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 720px;
+}
+
+.innercontent--withmap {
+  min-height: 720px;
 }
