fixes fixes fixes

--- a/source/jade/contacts-2.jade
+++ b/source/jade/contacts-2.jade
@@ -25,6 +25,8 @@ html(lang='ru').no-js
             ul
               li: a(href="#") Главная
               li Карта офисов и классов
+          a.btn.contacts__item__showBigmap(href="#") Показать карту
+          a.btn.contacts__item__hideBigmap(href="#") Скрыть карту
 
       include includes/footer
     include includes/tail
