--- a/source/jade/includes/tail.jade
+++ b/source/jade/includes/tail.jade
@@ -7,6 +7,7 @@
 <![endif]-->
 
 script(src='//api-maps.yandex.ru/2.1/?lang=ru_RU', type='text/javascript')
+script(src='js/vendor/fastclick.js')
 script(src='js/vendor/jquery.placeholder.js')
 script(src='js/vendor/iscroll.js')
 script(src='js/vendor/jquery.mousewheel-3.0.6.min.js')
