--- a/source/jade/contacts.jade
+++ b/source/jade/contacts.jade
@@ -29,7 +29,10 @@ html(lang='ru').no-js
           .contacts__item
             h2 ОФИС на Алеутской, 11
             p Учебный  класс и офис расположены вблизи остановки общественного транспорта "Ж/д  вокзал", в здании "ПриморГражданПроекта."
-            #map-1.contacts__item__map
+            .contacts__item__map__container
+              #map-1.contacts__item__map
+              a.btn.contacts__item__showmap(href="#") Показать карту
+              a.btn.contacts__item__hidemap(href="#") Скрыть карту
             .contacts__item__info
               i.icon-pin
               |Алеутская, 11<br>Офис по работе с клиентами находится рядом с учебным классом на 8-ом этаже, каб. 805/5
@@ -43,7 +46,10 @@ html(lang='ru').no-js
           .contacts__item
             h2 ОФИС на Светланской, 147
             p Офис и учебный класс на ул. Светланской, 147 расположены вблизи остановки общественного транспорта "Авангард" в здании "Центра народной культуры"
-            #map-2.contacts__item__map
+            .contacts__item__map__container
+              #map-2.contacts__item__map
+              a.btn.contacts__item__showmap(href="#") Показать карту
+              a.btn.contacts__item__hidemap(href="#") Скрыть карту
             .contacts__item__info
               i.icon-pin
               |Светланская, 147<br>Офис № 5 расположен на 1-ом этаже, учебный класс на 3-ем этаже здания.
@@ -57,7 +63,10 @@ html(lang='ru').no-js
           .contacts__item
             h2 ОФИС на Калинина, 230
             p Офис и учебный класс расположены вблизи остановки общественного транспорта "Диомид"
-            #map-3.contacts__item__map
+            .contacts__item__map__container
+              #map-3.contacts__item__map
+              a.btn.contacts__item__showmap(href="#") Показать карту
+              a.btn.contacts__item__hidemap(href="#") Скрыть карту
             .contacts__item__info
               i.icon-pin
               |Калинина, 230
@@ -71,7 +80,10 @@ html(lang='ru').no-js
           .contacts__item
             h2 ОФИС на Партизанском пр-те, 36
             p Офис и учебный класс расположены вблизи остановки общественного транспорта  "Инструментальный завод" по адресу Партизанский пр-т 36.
-            #map-4.contacts__item__map
+            .contacts__item__map__container
+              #map-4.contacts__item__map
+              a.btn.contacts__item__showmap(href="#") Показать карту
+              a.btn.contacts__item__hidemap(href="#") Скрыть карту
             .contacts__item__info
               i.icon-pin
               |Партизанский пр-т, 36<br>2ой этаж, офис 10 (вход со стороны подъездов)
@@ -85,7 +97,10 @@ html(lang='ru').no-js
           .contacts__item
             h2 ОФИС на 100 лет Владивостоку, 40 а
             p Офис и учебный класс, расположены вблизи остановки общественного транспорта "100-летие Владивостоку"
-            #map-5.contacts__item__map
+            .contacts__item__map__container
+              #map-5.contacts__item__map
+              a.btn.contacts__item__showmap(href="#") Показать карту
+              a.btn.contacts__item__hidemap(href="#") Скрыть карту
             .contacts__item__info
               i.icon-pin
               |пр. 100 лет Владивостоку, 40 а<br>В торговом центре "Зенит" на 4-ом этаже.
@@ -98,7 +113,10 @@ html(lang='ru').no-js
 
           .contacts__item
             h2 ОФИС на Авроровской, 20
-            #map-6.contacts__item__map
+            .contacts__item__map__container
+              #map-6.contacts__item__map
+              a.btn.contacts__item__showmap(href="#") Показать карту
+              a.btn.contacts__item__hidemap(href="#") Скрыть карту
             .contacts__item__info
               i.icon-pin
               |ул. Авроровская, 20
@@ -111,7 +129,10 @@ html(lang='ru').no-js
 
           .contacts__item
             h2 Автодром на западной, 29
-            #map-7.contacts__item__map
+            .contacts__item__map__container
+              #map-7.contacts__item__map
+              a.btn.contacts__item__showmap(href="#") Показать карту
+              a.btn.contacts__item__hidemap(href="#") Скрыть карту
             .contacts__item__info
               i.icon-pin
               |Западная, 29
