--- a/source/jade/includes/footer.jade
+++ b/source/jade/includes/footer.jade
@@ -28,4 +28,4 @@ footer
     .footer__contact
       span Контактная информация
       h2 8 (423) 2-205-203, 273-07-08
-    .footer__developer <i class="iastudio__logo"></i> Разработка сайта - <a href="http://iastudio.ru">Интерактив</a>
+    .footer__developer <i class="iastudio__logo"></i> Разработка сайта - <a href="http://iastudio.ru" target="_blank">Интерактив</a>
