--- a/source/jade/includes/footer.jade
+++ b/source/jade/includes/footer.jade
@@ -29,3 +29,20 @@ footer
       span Контактная информация
       h2 8 (423) 2-205-203, 273-07-08
     .footer__developer <i class="iastudio__logo"></i> Разработка сайта - <a href="http://iastudio.ru" target="_blank">Интерактив</a>
+
+#signup-modal.modal.mfp-hide
+  h3 Записаться на обучение
+  form(id="", method="", action="")
+    input(type="text", placeholder="Ваше имя")
+    input(type="tel", placeholder="Телефон")
+    input(type="text", placeholder="Категория")
+    input(type="text", placeholder="Район")
+    textarea(placeholder="Дополнительно")
+    input(type="submit", value="Отправить заявку")
+
+#callback-modal.modal.mfp-hide
+  h3 Заказать обратный звонок
+  form(id="", method="", action="")
+    input(type="tel", placeholder="Телефон")
+    input(type="submit", value="Отправить")
+
