--- a/source/scss/_else.scss
+++ b/source/scss/_else.scss
@@ -157,6 +157,7 @@
       position: relative;
       top: -12px;
       background-color: #fff;
+      padding: 0 10px;
       display: inline-block;
     }
 
