--- a/source/jade/includes/tail.jade
+++ b/source/jade/includes/tail.jade
@@ -12,7 +12,7 @@ script(src='js/vendor/jquery.placeholder.js')
 script(src='js/vendor/iscroll.js')
 script(src='js/vendor/jquery.mousewheel-3.0.6.min.js')
 script(src='js/vendor/jquery.mCustomScrollbar.min.js')
-//- script(src='js/vendor/jquery.easing.1.3.js')
+script(src='js/vendor/jquery.magnific-popup.min.js')
 //- script(src='js/vendor/jquery.modal.min.js')
 //- script(src='js/vendor/jquery-ui-1.10.4.custom.min.js')
 //- script(src='js/vendor/jquery.flexverticalcenter.js')
