--- a/source/scss/_forms.scss
+++ b/source/scss/_forms.scss
@@ -15,31 +15,43 @@ input[type="url"],
 textarea, .select {
 
   @include placeholder {
-    color: #807a7a;
-    font-size: 14px;
+    color: #999;
+    font-family: "Kelson Sans", sans-serif;
+    font-size: rem-calc(14px);
   }
 
   -webkit-appearance: none;
   display: block;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
 
-  width: 300px;
+  width: 100%;
+  max-width: 260px;
   height: 41px;
   padding: 13px 16px;
 
-  border: 1px solid #e0e0e0;
-  @include border-radius(3px);
+  @include border-radius(5px);
   @include background-clip(padding-box);
-  background-color: #f7f7f7;
-  @include background-image(linear-gradient(to bottom, #fff 0%, #f7f7f7 100%));
 
+  border: 1px solid #aca8a8;
+  background-color: #fdfdfd;
+  @include box-shadow(inset 0 3px 5px #dde3e7);
+  @include background-image(linear-gradient(to bottom, #fdfdfd 0%, #f3f3f3 100%));
 
-  color: #807a7a;
-  font-size: 14px;
+  color: #999;
+  font-family: "Kelson Sans", sans-serif;
+  font-size: rem-calc(14px);
+
+  transition: all .2s ease;
+
+  &:focus {
+    @include background-image(linear-gradient(to bottom, lighten(#fdfdfd, 20%) 0%, lighten(#f3f3f3, 20%) 100%));
+  }
 }
 
 textarea {
-  height: 100px;
+  width: 100%;
+  max-width: 100%;
+  height: 90px;
 }
 
 .btn, a.btn, input[type=submit] {
@@ -102,5 +114,36 @@ textarea {
     padding-top: 0;
     padding-bottom: 0;
     line-height: 2rem;
+  }
+}
+
+
+input[type=submit] {
+  background: transparent;
+  @include border-radius(30px);
+  @include background-clip(padding-box);
+  background-color: #fff;
+  border: 2px solid #1C73BF;
+  color: #1C73BF;
+  font-size: rem-calc(14px);
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 0 12px;
+  box-shadow: none;
+  text-shadow: none;
+
+  transition: all .2s ease;
+
+  &:hover {
+    background: transparent;
+    background-color: #1C73BF;
+    color: #FFF;
+    box-shadow: none;
+    text-shadow: none;
+
+    &:active {
+      position: relative;
+      top: 2px;
+    }
   }
 }
