--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -27,6 +27,7 @@
 @import "slider";
 @import "scrollbars";
 @import "inner";
+@import "modal";
 
 // Elements
 @import "header";
@@ -42,6 +43,13 @@ body {
 	font-family: 'Roboto Condensed', sans-serif;
 	background: $bg-color;
 	line-height: 150%;
+}
+
+body {
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility:    hidden;
+  -ms-backface-visibility:     hidden;
 }
 
 html {
