--- a/source/scss/_else.scss
+++ b/source/scss/_else.scss
@@ -420,3 +420,73 @@ html.touch {
     min-height: 720px;
   }
 }
+
+
+.suppa-btn {
+    position: relative;
+    z-index: 2;
+    font-size: 1.185rem;
+
+    text-align: center;
+    color: #fff !important;
+    text-transform: uppercase;
+    font-weight: 700;
+    @include text-shadow(0 1px 0 rgba(132,89,5,.75));
+    margin-bottom: 18px;
+    padding: 10px 20px;
+    padding-top: 0;
+    padding-bottom: 0;
+    line-height: 2.3rem;
+    height: 2rem;
+    @include border-radius(15px);
+    @include background-clip(padding-box);
+    background: transparent;
+
+    transition: all .3s ease-out;
+    box-shadow: 0 0 0 0 rgba(0,0,0,.19);
+
+    overflow: hidden;
+
+    &:hover {
+      @include text-shadow(0 1px 0 rgba(0,0,0,.18));
+      color: #FFF !important;
+      &:active {
+        box-shadow: 0 17px 50px 0 rgba(0,0,0,.19);
+      }
+    }
+
+    &:after {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding-top: 0;
+      width: 100%; height: 100%;
+      content: ' ';
+      @include background-image(linear-gradient(to bottom, #db1921 0%, #d91921 100%));
+      z-index: -2;
+    }
+
+    &:before {
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      padding-top: 0;
+      width: 0;
+      height: 0;
+      border-radius: 100%;
+      transition: all .5s ease-out;
+      transform: translate(-50%, -50%);
+      content: '';
+      @include background-image(linear-gradient(to bottom, #71BB31 0%, #7ECF31 100%));
+      z-index: -1;
+    }
+
+    &:hover {
+
+      &:before {
+        width: 500px; height: 500px;
+      }
+    }
+  }
