--- a/source/jade/calc.jade
+++ b/source/jade/calc.jade
@@ -54,7 +54,9 @@ html(lang='ru').no-js
                 label Форма обучения:
                 select#select-type
                   option(value="0", selected, disabled) Выбрать
-                  option(value="1") Группа рабочего дня
+                  option(value="1") Утренняя
+                  option(value="1") Дневная
+                  option(value="1") Вечерняя
                   option(value="2") Группа выходного дня
 
               .calc__col
